--- a/ap/pom.xml
+++ b/ap/pom.xml
@@ -26,6 +26,11 @@
             <version>5.8.0-M1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>16</version>
+        </dependency>
 
 
     </dependencies>
